--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,327 @@
-footer{
-    background-color: aqua;
+/*-----------------------------------------------FOR_ALL-------------------------------------------------------------*/
+
+* {
+    font-family: sans-serif;
+
 }
+
+body {
+    width: 1024px;
+    height: 39px;
+    margin: 20px auto;
+    background-color: white;
+    padding: 0;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+}
+
+.pageName{
+    width: 100%;
+    background-color: #ea6363;
+    float: left;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+    margin-top: -17px;
+    height: 60px;
+}
+
+header li{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+
+nav a{
+    display: block;
+    position: absolute;
+    top: 38px;
+    left: 570px;
+    height: 50px;
+    width: 100px;
+    background-color: #7ec69e;
+    float: left;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+    text-align: center;
+    padding-top: 10px;
+    margin-top: -38px;
+}
+.first{
+    display: block;
+    position: absolute;
+    top: 58px;
+    left: 500px;
+    /*width: 14.3%;*/
+    background-color: #4ea1d7;
+    float: left;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+}
+.second{
+    display: block;
+    position: absolute;
+    top: 58px;
+    left: 600px;
+    /*width: 14.3%;*/
+    background-color: #4ea1d7;
+    float: left;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+}
+.third{
+    display: block;
+    position: absolute;
+    top: 58px;
+    left: 700px;
+    /*width: 14.3%;*/
+    background-color: #4ea1d7;
+    float: left;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+}
+.login{
+    display: block;
+    position: absolute;
+    top: 58px;
+    left: 1132px;
+    /*width: 14.3%;*/
+    background-color: #098842;
+    float: left;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+}
+.section{
+    background-color: #f1f153;
+}
+.mainHeader{
+    background-color: gray;
+    width: 450px;
+    float: left;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+    /*display: inline-block;*/
+    margin-left: 20px;
+    margin-top: 8px;
+    height: 35px;;
+    text-align: center;
+    padding-top: 8px;
+}
+.text{
+    background-color: gray;
+    width: 700px;
+    float: left;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+    /*display: inline-block;*/
+    margin-left: 20px;
+    margin-top: 0px;
+    height: 100px;
+    text-align: center;
+    padding-top: 80px;
+}
+.Article1{
+    background-color: gray;
+    width: 300px;
+    height: 300px;
+    display: inline-block;
+    margin-left: -1005px;
+    margin-top: 390px;
+    text-align: center;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+    margin-bottom: 120px;
+}
+.Article2{
+    background-color: gray;
+    width: 300px;
+    height: 300px;
+    float: left;
+    /*margin-right: 20px;*/
+    margin-left: 420px;
+    margin-top: -420px;
+    text-align: center;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+}
+
+.photo{
+    height: 170px;
+    width: 80px;
+}
+
+.aside{
+    background-color: #c6f3c6;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+    margin-left: 780px;
+    width: 243px;
+    height: 720px;
+    margin-top: -805px;
+}
+.sideContent{
+    text-align: center;
+    background-color: gray;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+    margin-left: 25px;
+    margin-right: 25px;
+    margin-top: 25px;
+    height: 13px;
+    padding-top: 25px;
+}
+.footer{
+    background-color: #dd65dd;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+    text-align: center;
+    height: 80px;
+}
+/*.loginName{
+    width: 100%;
+    background-color: #ff0000;
+    float: left;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+    margin-top: -17px;
+    height: 60px;
+}*/
+
+.loginMain{
+    background-color: gray;
+    width: 750px;
+    float: left;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+    /*display: inline-block;*/
+    margin-left: 60px;
+    margin-top: 40px;
+    height: 350px;;
+    text-align: center;
+    padding-top: 8px;
+}
+.index{
+
+    display: block;
+    position: absolute;
+    top: 47px;
+    left: 1132px;
+    /*width: 14.3%;*/
+    background-color: #38bbef;
+    float: left;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+}
+.firstLogin{
+    display: block;
+    position: absolute;
+    top: 47px;
+    left: 500px;
+    /*width: 14.3%;*/
+    background-color: #89e5b3;
+    float: left;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+}
+.secondLogin{
+    display: block;
+    position: absolute;
+    top: 47px;
+    left: 600px;
+    /*width: 14.3%;*/
+    background-color: #89e5b3;
+    float: left;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+}
+.thirdLogin{
+    display: block;
+    position: absolute;
+    top: 47px;
+    left: 700px;
+    /*width: 14.3%;*/
+    background-color: #89e5b3;
+    float: left;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+}
+.loginPageName{
+    width: 100%;
+    background-color: #f16565;
+    float: left;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+    margin-top: -33px;
+    height: 60px;
+}
+.footerLogin{
+    background-color: #d97dd9;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+    text-align: center;
+    height: 80px;
+    width: 1024px;
+    display: block;
+    position: absolute;
+    top: 650px;
+    left: 204px;
+}
+.bodyLogin{
+    width: 1024px;
+    height: 39px;
+    margin: 20px auto;
+    background-color: #7373d0;
+    padding: 0;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+}
+.ccLogin{
+    background-color: gray;
+    width: 450px;
+    float: left;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+    /*display: inline-block;*/
+    margin-left: 30px;
+    margin-top: 75px;
+    height: 35px;;
+    text-align: center;
+    padding-top: 8px;
+}
+.backgroundLogin{
+    background-color: #f1f153;
+}
+.bgc{
+    background-color: #f1f153;
+    height: 670px;
+    width: 500px;
+}
+
+
+
+
+
